# angustifolia

./: .gitmodules  CMakeLists.txt  README.md  pom.xml
client-natives-linux/: CMakeLists.txt
client-natives-linux/src/: com_mcres_luckyfish_angustifolia_licenseclient_plugin_classloader_EncryptedClassLoader.h  entry.c
client-natives-linux/src/class/: ClassAnalyzer.c  ClassHeader.h
client-natives-linux/src/crypto/: base64.c  blowfish.c  blowfish.h  idea.c  idea.h
client-natives-linux/src/debug/: debug.c  debug.h
client-natives-linux/src/lifecycle/: lifecycle.c  lifecycle.h
client-natives-linux/src/lifecycle/hardware/: hardware.c  hardware.h
client-natives-linux/src/main/: decypher.c  main.h
client-natives-linux/src/network/: network.c  network.h  packet.c  packet.h
client-natives-linux/src/util/: java.c  memory.c  time.c  util.h
client-plugin/: pom.xml
client-plugin/resources/: plugin.yml
client-plugin/src/com/mcres/luckyfish/angustifolia/licenseclient/: NewEntry.java
client-plugin/src/com/mcres/luckyfish/angustifolia/licenseclient/plugin/: PluginLicenseClient.java
client-plugin/src/com/mcres/luckyfish/angustifolia/licenseclient/plugin/classloader/: EncryptedClassLoader.java
client-plugin/src/com/mcres/luckyfish/angustifolia/licenseclient/program/: Motd.java
java-debug/: pom.xml
java-debug/src/com/mcres/luckyfish/angustifolia/debugger/: JavaDebugger.java
obfuscate/: pom.xml
obfuscate/obfuscator-core/src/main/java/me/superblaubeere27/jobf/: JObfImpl.java  ObfuscatorClassLoader.java
obfuscate/obfuscator-core/src/main/java/me/superblaubeere27/jobf/processors/: ReferenceProxy.java
obfuscate/obfuscator-core/src/main/java/me/superblaubeere27/jobf/processors/name/: NameObfuscation.java
obfuscate/obfuscator-core/src/main/java/me/superblaubeere27/jobf/utils/: Utils.java
obfuscate/obfuscator-core/src/test/java/me/superblaubeere27/: ObfuscatorTest.java
server/: CMakeLists.txt
server/src/: main.c
server/src/crypto/: base64.c  base64.h  ecc.c  ecc.h
server/src/lifecycle/: connection_handler.c  connection_handler.h  event_handling.c  event_handling.h
server/src/motd/: motd.c  motd.h
server/src/mysql/: mcres_mysql.c  mcres_mysql.h
server/src/network/: network.c  network.h  packet.c  packet.h
server/src/util/: random.c  signal.c  util.h
upload/: pom.xml
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/: Fluoxetine.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/crypto/: Blowfish.java  Encryptor.java  IDEA.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/entry/: EntryFixer.java  PluginEntryFixer.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/entry/factory/: EntryFixerFactory.java  ProgramType.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/entry/modify/core/: CoreClassTransformer.java  CoreClassWriter.java  CoreFixer.java  CoreMethodTransformer.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/entry/modify/core/analysis/: RawClass.java  RawClassAnalyzer.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/entry/modify/template/: OriginalReferenceMaker.java  TemplateClassTransformer.java  TemplateEntryTransformer.java  TemplateFieldTransformer.java  TemplateFixer.java  TemplateMethodTransformer.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/entry/modify/template/util/: ReferenceMatcher.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/entry/modify/util/: AccessHelper.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/entry/pre/core/: CoreClassSeeker.java  CoreDataCollector.java  CoreMethodList.java  CoreMethodSeeker.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/jni/: CMakeFileUpdater.java  JNICodeGenerator.java  JNIHeadGenerator.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/jni/java/: DescriptorMapper.java  JavaClassReader.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/storage/: Database.java  MySQL.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/util/: EncryptWrapper.java  JarHelper.java  Logger.java  NameUtil.java  SilentBiConsumer.java  YamlReader.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/util/info/: MethodDescriptor.java  NativeMethodDescriptor.java
upload/src/com/mcres/luckyfish/angustifolia/fluoxetine/verification/: CodeInjector.java  MethodInjector.java  VerificationCodeInjector.java
